WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268056
[iOS] Time picker fails to dodge the software keyboard when presented below the element
https://bugs.webkit.org/show_bug.cgi?id=268056
Summary
[iOS] Time picker fails to dodge the software keyboard when presented below t...
Wenson Hsieh
Reported
2024-01-24 20:23:51 PST
rdar://120403319
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-01-24 20:48:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23222
EWS
Comment 2
2024-01-24 23:35:50 PST
Committed
273480@main
(a011563227e9): <
https://commits.webkit.org/273480@main
> Reviewed commits have been landed. Closing PR #23222 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug