Cherry-pick a011563227e9. rdar://120403319

[iOS] Time picker fails to dodge the software keyboard when presented below the element
    https://bugs.webkit.org/show_bug.cgi?id=268056
    rdar://120403319

    Reviewed by Aditya Keerthi.

    When presented *below* the time input, it's possible for time pickers to shrink (and sometimes even
    dismiss) when a software keyboard is shown, upon focusing either the hour or minute field. Avoid
    this for now by not presenting below the input; I've separately filed rdar://121571971 for UIKit to
    investigate moving the popover content in this case, instead of shrinking to fit.

    * Source/WebKit/UIProcess/ios/forms/WKDatePickerPopoverController.mm:
    (-[WKDatePickerPopoverController presentInView:sourceRect:completion:]):

    Canonical link: https://commits.webkit.org/273480@main

Identifier: 272448.410@safari-7618-branch